# contextcore

./: .gitignore  CONTEXT.md  LICENSE  MASTER_PROMPT.md  PROJECT.md  README.md  pyproject.toml
.contextcore/: context_snapshot.md  contextcore.db  test.db
.github/workflows/: ci-tag-gate.yml  ci.yml  release.yml
benchmarks/: quality_eval.py  subgraph_accuracy.py  token_count.py  v4_dogfood_report_external.md  v4_dogfood_validate.py  v4_queries.txt
db/: schema.sql  verify_schema.py
hooks/: install_hooks.py  post-commit
sample_project/: __init__.py  main.py
sample_project/core/: app.py  config.py  identifiers.py  labels.py
sample_project/models/: project.py  user.py
sample_project/services/: health_service.py  listing_service.py  project_service.py  user_service.py
sample_project/utils/: files.py  math_extra.py  numbers.py  strings.py
src/contextcore/: __init__.py
src/contextcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: TEST_MANIFEST.md  conftest.py  run_all.py  test_edge_cases.py  test_quality.py  test_run_all.py
tests/cli/: test_cli.py
tests/gate_checks/: gate_v1.py  gate_v2.py  gate_v3.py  gate_v4.py
tests/hooks/: test_git_hook.py
tests/integration/: test_v1_pipeline.py  test_v2_pipeline.py  test_v3_pipeline.py  test_v4_pipeline.py
tests/layer1_ast/: conftest.py  test_extractor.py  test_layer1_integration.py  test_parser.py
tests/layer3_intent/: test_classifier.py
tests/layer4_graph/: conftest.py  test_bfs_scoring.py  test_builder.py  test_layer4_integration.py  test_querier.py  test_schema.py
(+37 files in other folders)
